--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -148,18 +148,21 @@ body {
             .data-group {
                 display: flex;
                 justify-content: space-between;
-                margin-top: 60px;
+                margin-top: 120px;
                 .data-item {
-                    width: 268px;
+                    width: 360px;
                     height: 220px;
                     background: rgba(255, 255, 255, 1);
                     box-shadow: 0px 14px 40px 0px rgba(203, 203, 203, 0.2);
-                    border-radius: 30px 0px 30px 0px;
+                    border-radius: 20px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     flex-direction: column;
                     line-height: 1;
+                    &.contract {
+                        margin-top: -60px;
+                    }
                     img {
                         width: 48px;
                     }
@@ -179,7 +182,7 @@ body {
             }
         }
         .featured-dapps {
-            margin-top: 180px;
+            margin-top: 140px;
             .featured-dapps-group {
                 display: flex;
                 flex-wrap: wrap;
