--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -153,7 +153,7 @@ body {
                     width: 360px;
                     height: 220px;
                     background: rgba(255, 255, 255, 1);
-                    box-shadow: 0px 14px 40px 0px rgba(203, 203, 203, 0.2);
+                    box-shadow: -8px 6px 50px 0px rgba(203, 203, 203, 0.3);
                     border-radius: 20px;
                     display: flex;
                     align-items: center;
@@ -249,7 +249,10 @@ body {
                     position: relative;
                     &:nth-child(1),
                     &:nth-child(3),
-                    &:nth-child(6) {
+                    &:nth-child(6),
+                    &:nth-child(8),
+                    &:nth-child(9),
+                    &:nth-child(11) {
                         background-color: #fafafa;
                     }
                     img {
