fix: remove unused image, change image size

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -439,6 +439,7 @@ body {
                 }
                 img {
                     height: 110px;
+                    max-width: 100%;
                     cursor: pointer;
                 }
                 .name {
